[package]
name = "miz_jam"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "0.4.0-alpha0.6"
image = "0.23"
golem = "0.1"
vek = "0.12"
indexmap = "1"


[profile.release]
debug = true
